--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
         const modalOver = new bootstrap.Modal('#modalOver', [true, true, true]);
     </script>
     <script defer src="util.js"></script>
-    <script defer src="classes.js"></script>
+    <script defer src="game.js"></script>
+    <script defer src="gameset.js"></script>
     <script defer src="app.js"></script>
 
 </body>
